--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
       max-width: 350px;
       background: #2d3436;
       color: #fff;
-      font-size: 2rem;
-      font-weight: 700;
-      padding: 25px;
+      font-size: 1.2rem;
+      font-weight: 600;
+      padding: 20px;
       margin-top: 20px;
       border-radius: 20px;
       box-shadow: 0 8px 20px rgba(0,0,0,0.2);
@@ -67,6 +67,15 @@
     .time {
       font-size: 1.6rem;
       font-weight: 600;
+    }
+
+    input {
+      padding: 8px;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+      margin-bottom: 15px;
+      width: 100px;
+      text-align: center;
     }
 
     /* Responsive */
@@ -83,6 +92,9 @@
 </head>
 <body>
   <h1>🚆 Tren Saatleri</h1>
+
+  <label>🚶 Yürüyüş süresi (dk):</label>
+  <input type="number" id="walk-time" value="15" min="1">
 
   <div class="cards-container">
     <div class="card prev">
@@ -102,6 +114,13 @@
   <div class="big-card">
     ⏳ Kalan Süre <br>
     <span id="countdown">--:--</span>
+  </div>
+
+  <div class="big-card">
+    ✅ Uygun Çıkış Saati: <br>
+    <span id="leave-time">--:--</span> <br><br>
+    🚆 Yetişeceğin Tren: <br>
+    <span id="target-train">--:--</span>
   </div>
 
   <script>
@@ -143,7 +162,28 @@
         document.getElementById("countdown").textContent =
           `${mins.toString().padStart(2,'0')}:${secs.toString().padStart(2,'0')}`;
       }
+
+      // Yürüyüşe göre uygun çıkış saati
+      const walkTime = parseInt(document.getElementById("walk-time").value) || 0;
+      let targetTrain = "--:--", leaveTime = "--:--";
+
+      for (let i = 0; i < schedule.length; i++) {
+        const [h, m] = schedule[i].split(":").map(Number);
+        const trainTime = new Date();
+        trainTime.setHours(h, m, 0, 0);
+
+        const leaveDate = new Date(trainTime.getTime() - walkTime * 60000);
+        if (leaveDate > now) {
+          targetTrain = schedule[i];
+          leaveTime = leaveDate.getHours().toString().padStart(2,'0') + ":" + leaveDate.getMinutes().toString().padStart(2,'0');
+          break;
+        }
+      }
+
+      document.getElementById("leave-time").textContent = leaveTime;
+      document.getElementById("target-train").textContent = targetTrain;
     }
+
     setInterval(updateTimes, 1000);
     updateTimes();
   </script>
