--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     h1 {
       font-size: 1.8rem;
-      margin-bottom: 10px;
+      margin-bottom: 20px;
       font-weight: 700;
       color: #333;
     }
@@ -27,34 +27,43 @@
     .direction-buttons {
       display: flex;
       gap: 10px;
-      margin-bottom: 20px;
+      margin-bottom: 15px;
     }
 
     .direction-buttons button {
-      padding: 8px 16px;
+      padding: 10px 20px;
       border: none;
-      border-radius: 8px;
+      border-radius: 12px;
+      font-size: 1rem;
       font-weight: 600;
       cursor: pointer;
-      background: #ddd;
-      color: #333;
       transition: 0.3s;
+      background: #ccc;
+      color: #333;
     }
 
     .direction-buttons button.active {
-      background: #c0392b;
-      color: #fff;
+      background: #e74c3c;
+      color: white;
+    }
+
+    .cards-container {
+      display: flex;
+      gap: 10px;
+      justify-content: center;
+      width: 100%;
+      max-width: 360px;
+      margin-bottom: 15px;
     }
 
     .card {
-      width: 100%;
-      max-width: 350px;
+      flex: 1;
       background: white;
       padding: 15px;
-      margin: 10px 0;
       border-radius: 16px;
       box-shadow: 0 6px 16px rgba(0,0,0,0.1);
       text-align: center;
+      font-size: 0.9rem;
     }
 
     .prev { background: #ffe5e5; color: #c0392b; }
@@ -63,71 +72,44 @@
 
     .big-card {
       width: 100%;
-      max-width: 350px;
+      max-width: 360px;
       background: #2d3436;
       color: #fff;
-      font-size: 2rem;
-      font-weight: 700;
-      padding: 25px;
-      margin-top: 20px;
+      font-size: 1.2rem;
+      font-weight: 600;
+      padding: 20px;
+      margin-top: 15px;
       border-radius: 20px;
       box-shadow: 0 8px 20px rgba(0,0,0,0.2);
       text-align: center;
     }
 
     .time {
-      font-size: 1.6rem;
+      font-size: 1.4rem;
       font-weight: 600;
-    }
-
-    .plan-card {
-      margin-top: 20px;
-      padding: 15px;
-      background: #fffbea;
-      border-radius: 16px;
-      box-shadow: 0 6px 16px rgba(0,0,0,0.1);
-      max-width: 350px;
-      text-align: center;
-      font-weight: 600;
-      color: #444;
     }
 
     input {
       padding: 8px;
       border-radius: 8px;
       border: 1px solid #ccc;
-      width: 80px;
+      margin-bottom: 15px;
+      width: 120px;
       text-align: center;
-      margin-right: 10px;
-    }
-
-    button.calc {
-      padding: 8px 14px;
-      border: none;
-      border-radius: 8px;
-      font-weight: 600;
-      cursor: pointer;
-      background: #27ae60;
-      color: #fff;
-    }
-
-    /* Responsive */
-    @media (min-width: 768px) {
-      .cards-container {
-        display: flex;
-        gap: 20px;
-      }
-      .card { flex: 1; }
+      font-size: 1rem;
     }
   </style>
 </head>
 <body>
-  <h1 id="direction-title">🚆 Tren Saatleri (Mamak)</h1>
+  <h1>🚆 Tren Saatleri</h1>
 
   <div class="direction-buttons">
-    <button id="btn-mamak" class="active">Mamak (Kayaş → Sincan)</button>
-    <button id="btn-yenisehir">Yenişehir (Sincan → Kayaş)</button>
+    <button id="btn-mamak" class="active">Mamak</button>
+    <button id="btn-yenisehir">Yenişehir</button>
   </div>
+
+  <label>🚶 Yürüyüş süresi (dk):</label>
+  <input type="number" id="walk-time" value="15" min="1">
 
   <div class="cards-container">
     <div class="card prev">
@@ -149,60 +131,60 @@
     <span id="countdown">--:--</span>
   </div>
 
-  <!-- Yürüyüş Planı -->
-  <div class="plan-card">
-    🚶 Yürüyüş Süresi (dk): 
-    <input type="number" id="walk-time" value="15" min="1">
-    <button class="calc" onclick="calculatePlan()">Hesapla</button>
-    <div id="plan-result" style="margin-top:10px;">--</div>
+  <div class="big-card">
+    ✅ Uygun Çıkış Saati: <br>
+    <span id="leave-time">--:--</span> <br><br>
+    🚆 Yetişeceğin Tren: <br>
+    <span id="target-train">--:--</span>
   </div>
 
   <script>
-    const schedules = {
-      mamak: [
-        "06:07","06:19","06:31","06:43","06:55","07:07","07:19","07:31","07:43","07:55",
-        "08:07","08:19","08:31","08:43","08:55","09:07","09:22","09:37","09:52","10:07",
-        "10:22","10:37","10:52","11:07","11:22","11:37","11:52","12:07","12:22","12:37",
-        "12:52","13:07","13:22","13:37","13:52","14:07","14:22","14:37","14:52","15:07",
-        "15:22","15:37","15:52","16:04","16:16","16:28","16:40","16:52","17:04","17:16",
-        "17:28","17:40","17:52","18:04","18:16","18:28","18:40","18:52","19:07","19:22",
-        "19:37","19:52","20:07","20:22","20:37","20:52","21:07","21:22","21:37","22:07",
-        "22:37","23:07","23:37"
-      ],
-      yenisehir: [
-        "06:33","06:45","06:57","07:09","07:21","07:33","07:45","07:57","08:09","08:21",
-        "08:33","08:45","08:57","09:09","09:21","09:33","09:48","10:03","10:18","10:33",
-        "10:48","11:03","11:18","11:33","11:48","12:03","12:18","12:33","12:48","13:03",
-        "13:18","13:33","13:48","14:03","14:18","14:33","14:48","15:03","15:18","15:33",
-        "15:48","16:03","16:18","16:30","16:42","16:54","17:06","17:18","17:30","17:42",
-        "17:54","18:06","18:18","18:30","18:42","18:54","19:06","19:18","19:33","19:48",
-        "20:03","20:18","20:33","20:48","21:03","21:18","21:33","21:48","22:03","22:33",
-        "23:03","23:33","00:03"
-      ]
-    };
+    const mamakTimes = [
+      "06:07","06:19","06:31","06:43","06:55","07:07","07:19","07:31","07:43","07:55",
+      "08:07","08:19","08:31","08:43","08:55","09:07","09:22","09:37","09:52","10:07",
+      "10:22","10:37","10:52","11:07","11:22","11:37","11:52","12:07","12:22","12:37",
+      "12:52","13:07","13:22","13:37","13:52","14:07","14:22","14:37","14:52","15:07",
+      "15:22","15:37","15:52","16:04","16:16","16:28","16:40","16:52","17:04","17:16",
+      "17:28","17:40","17:52","18:04","18:16","18:28","18:40","18:52","19:07","19:22",
+      "19:37","19:52","20:07","20:22","20:37","20:52","21:07","21:22","21:37","22:07",
+      "22:37","23:07","23:37"
+    ];
 
-    let currentDirection = "mamak";
+    const yenisehirTimes = [
+      "06:33","06:45","06:57","07:09","07:21","07:33","07:45","07:57","08:09","08:21",
+      "08:33","08:45","08:57","09:09","09:21","09:33","09:48","10:03","10:18","10:33",
+      "10:48","11:03","11:18","11:33","11:48","12:03","12:18","12:33","12:48","13:03",
+      "13:18","13:33","13:48","14:03","14:18","14:33","14:48","15:03","15:18","15:33",
+      "15:48","16:03","16:18","16:30","16:42","16:54","17:06","17:18","17:30","17:42",
+      "17:54","18:06","18:18","18:30","18:42","18:54","19:06","19:18","19:33","19:48",
+      "20:03","20:18","20:33","20:48","21:03","21:18","21:33","21:48","22:03","22:33",
+      "23:03","23:33","00:03"
+    ];
 
-    function parseTime(str) {
-      const [h, m] = str.split(":").map(Number);
-      const d = new Date();
-      d.setHours(h, m, 0, 0);
-      return d;
-    }
+    let currentSchedule = mamakTimes;
+
+    document.getElementById("btn-mamak").addEventListener("click", () => {
+      currentSchedule = mamakTimes;
+      document.getElementById("btn-mamak").classList.add("active");
+      document.getElementById("btn-yenisehir").classList.remove("active");
+    });
+
+    document.getElementById("btn-yenisehir").addEventListener("click", () => {
+      currentSchedule = yenisehirTimes;
+      document.getElementById("btn-yenisehir").classList.add("active");
+      document.getElementById("btn-mamak").classList.remove("active");
+    });
 
     function updateTimes() {
-      const schedule = schedules[currentDirection];
       const now = new Date();
-      document.getElementById("current-time").textContent =
-        now.getHours().toString().padStart(2, "0") + ":" +
-        now.getMinutes().toString().padStart(2, "0");
+      const currentTime = now.getHours().toString().padStart(2,'0') + ":" + now.getMinutes().toString().padStart(2,'0');
+      document.getElementById("current-time").textContent = currentTime;
 
       let prev = "--:--", next = "--:--";
-      for (let i = 0; i < schedule.length; i++) {
-        let trainTime = parseTime(schedule[i]);
-        if (trainTime > now) {
-          next = schedule[i];
-          prev = schedule[i - 1] || "--:--";
+      for (let i = 0; i < currentSchedule.length; i++) {
+        if (currentSchedule[i] > currentTime) {
+          next = currentSchedule[i];
+          prev = currentSchedule[i-1] || "--:--";
           break;
         }
       }
@@ -210,47 +192,35 @@
       document.getElementById("next-time").textContent = next;
 
       if (next !== "--:--") {
-        let diff = parseTime(next) - now;
-        let mins = Math.floor(diff / 60000);
-        let secs = Math.floor((diff % 60000) / 1000);
+        const [h, m] = next.split(":").map(Number);
+        const nextDate = new Date();
+        nextDate.setHours(h, m, 0, 0);
+        const diff = nextDate - now;
+        const mins = Math.floor(diff / 60000);
+        const secs = Math.floor((diff % 60000) / 1000);
         document.getElementById("countdown").textContent =
           `${mins.toString().padStart(2,'0')}:${secs.toString().padStart(2,'0')}`;
       }
-    }
 
-    function calculatePlan() {
-      const walk = parseInt(document.getElementById("walk-time").value);
-      const schedule = schedules[currentDirection];
-      const now = new Date();
+      const walkTime = parseInt(document.getElementById("walk-time").value) || 0;
+      let targetTrain = "--:--", leaveTime = "--:--";
 
-      for (let i = 0; i < schedule.length; i++) {
-        let trainTime = parseTime(schedule[i]);
-        let leaveTime = new Date(trainTime - walk * 60000);
-        if (leaveTime > now) {
-          document.getElementById("plan-result").textContent =
-            `⏱ ${schedule[i]} trenine yetişmek için en geç ${leaveTime.getHours().toString().padStart(2,"0")}:${leaveTime.getMinutes().toString().padStart(2,"0")}’de çıkmalısın.`;
-          return;
+      for (let i = 0; i < currentSchedule.length; i++) {
+        const [h, m] = currentSchedule[i].split(":").map(Number);
+        const trainTime = new Date();
+        trainTime.setHours(h, m, 0, 0);
+
+        const leaveDate = new Date(trainTime.getTime() - walkTime * 60000);
+        if (leaveDate > now) {
+          targetTrain = currentSchedule[i];
+          leaveTime = leaveDate.getHours().toString().padStart(2,'0') + ":" + leaveDate.getMinutes().toString().padStart(2,'0');
+          break;
         }
       }
-      document.getElementById("plan-result").textContent = "Bugün başka tren yok.";
+
+      document.getElementById("leave-time").textContent = leaveTime;
+      document.getElementById("target-train").textContent = targetTrain;
     }
-
-    // Butonlara event ekle
-    document.getElementById("btn-mamak").addEventListener("click", () => {
-      currentDirection = "mamak";
-      document.getElementById("direction-title").textContent = "🚆 Tren Saatleri (Mamak)";
-      document.getElementById("btn-mamak").classList.add("active");
-      document.getElementById("btn-yenisehir").classList.remove("active");
-      updateTimes();
-    });
-
-    document.getElementById("btn-yenisehir").addEventListener("click", () => {
-      currentDirection = "yenisehir";
-      document.getElementById("direction-title").textContent = "🚆 Tren Saatleri (Yenişehir)";
-      document.getElementById("btn-yenisehir").classList.add("active");
-      document.getElementById("btn-mamak").classList.remove("active");
-      updateTimes();
-    });
 
     setInterval(updateTimes, 1000);
     updateTimes();
